# contact_model_study

./: .gitignore  LICENSE  README.md  pyproject.toml  streaming.py  test_headless.py  test_multiworld_speed.py
LICENSES/: Apache-2.0.txt
analysis/: plot_results.py
benchmark/: README.md  benchmark.py
benchmark/aloha_cloth/: scene.xml
benchmark/aloha_pot/: scene.xml
benchmark/aloha_sdf/: scene.xml
benchmark/apptronik_apollo/: README.md  apptronik_apollo.xml  scene_flat.xml  scene_hfield.xml  scene_objects.xml  scene_terrain.xml
benchmark/cloth/: scene.xml
benchmark/franka_cube_grasp/: panda.xml  scene.xml
benchmark/franka_emika_panda/: panda.xml  scene.xml
benchmark/humanoid/: humanoid.xml  n_humanoid.xml
benchmark/kitchen/: CHANGELOG.md  LICENSE  README.md  kitchen.xml  populate_scene.py
benchmark/leap/: env_leap_cube.xml  leap_right_hand.xml
benchmark/test_data/: __init__.py  ball_rotation.xml  cylinder_rolling.xml  primitives.xml
benchmark/test_data/actuation/: adhesion.xml
benchmark/test_data/allegro/: allegro_right_hand.xml  env_allegro_cube.xml
benchmark/test_data/collision_sdf/: utils.py
comfree_warp/: __init__.py  api.py
comfree_warp/comfree_core/: LICENSE  __init__.py
comfree_warp/mujoco_warp/: __init__.py  conftest.py  testspeed.py  viewer.py
contact_study/contact_models/: api.py  benchmarks.py  config.py  xpbd_backend.py
contact_study/evaluation/: metrics.py
contact_study/planners/: cem.py  mppi.py
contact_study/tasks/: base.py  tasks.py
contact_study/utils/: physics_noise.py  rollout.py
experiments/: benchmark_speed.py  measure_approx_error.py  run_experiment.py
scenes/test_data/: __init__.py  ball_rotation.xml  collision.xml  constraints.xml  cylinder_rolling.xml  pendula.xml  primitives.xml  ray.xml
test_headless/: test_franka_grasp.py  test_streaming.py
test_local/: test_franka_grasp.py  test_throuput_hand.py  test_viewer.py
tests/: test_allegro.py  test_config.py  test_forward.py  test_integration.py  test_mppi.py  test_primitives.py
tests_local_viewer/: test_rolling.py  test_throuput_hand.py  test_viewer.py  test_z_rotate.py
(+87 files in other folders)
