[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfree_warp"
version = "0.1.0"
description = "A physics simulation engine combining MuJoCo and WARP for GPU-accelerated dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Newton Developers"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "warp-lang>=1.12",
    "mujoco==3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-xdist>=2.0",
]

[project.urls]
Homepage = "https://github.com/google/comfree"
Documentation = "https://github.com/google/comfree"
Repository = "https://github.com/google/comfree.git"
"Bug Tracker" = "https://github.com/google/comfree/issues"

[tool.setuptools]
packages = ["comfree_warp"]

[tool.setuptools.package-data]
comfree_warp = [
    "py.typed",
    "**/*.py",
]
